Added Pixel art

--- a/src/main/resources/assets/instantbuidlings/lang/en_us.json
+++ b/src/main/resources/assets/instantbuidlings/lang/en_us.json
@@ -1,22 +1,27 @@
 {
   "block.instantbuidlings.oldchurch": "Old Church",
-  "block.instantbuidlings.villagerhouse": "Villager House",
   "block.instantbuidlings.docks": "Docks",
   "block.instantbuidlings.gate": "Gate",
   "block.instantbuidlings.windmill": "Windmill",
   "block.instantbuidlings.barracks": "Barracks",
   "block.instantbuidlings.guardpost": "GuardPost",
   "block.instantbuidlings.snakespawn": "Snake Spawn",
-  "block.instantbuidlings.fountain": "Fountain",
   "block.instantbuidlings.waterfall": "Waterfall",
   "block.instantbuidlings.strangechurch": "Strange Church",
   "block.instantbuidlings.tower": "Tower",
-  "block.instantbuidlings.housetwo": "House two",
   "block.instantbuidlings.tree": "Tree",
-  "block.instantbuidlings.autodoor": "Redstone Door",
-  "block.instantbuidlings.boat": "Boat",
+  "block.instantbuidlings.p_5": "Pixel Art 5",
   "block.instantbuidlings.bridge": "Bridge",
   "block.instantbuidlings.wall": "Wall",
+  "block.instantbuidlings.p_4": "Pixel Art 4",
+  "block.instantbuidlings.p_3": "Pixel Art 3",
+  "block.instantbuidlings.p_2": "Pixel Art 2",
+  "block.instantbuidlings.villagerhouse": "Villager House",
+  "block.instantbuidlings.fountain": "Fountain",
+  "block.instantbuidlings.pixel_1": "Pixel Art 1",
+  "block.instantbuidlings.housetwo": "House two",
+  "block.instantbuidlings.autodoor": "Redstone Door",
+  "block.instantbuidlings.boat": "Boat",
   "block.instantbuidlings.shop": "Shop",
   "block.instantbuidlings.farm": "Redstone Farm",
   "block.instantbuidlings.barn": "Barn",
